--- a/web_static/styles/7-places.css
+++ b/web_static/styles/7-places.css
@@ -1,22 +1,26 @@
 .places {
-	display: flex;
-	flex-flow: row wrap;
-	justify-content: space-evely;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
-.places h1 {
-	height: 30px;
-	width: 100%;
-	font-size: 30px;
-	padding-left: 3%;
+.places h1{
+    font-size: 30px;
+    text-align: left;
+    width: 100%;
+    margin-bottom: 0;
+}
+
+.places h2 {
+    font-size: 30px;
+    margin-top: 0;
 }
 
 .places article h2 {
-	width: 390px;
-	padding: 20px;
-	margin: 20px;
-	border: 1px solid #FF5A5F;
-	border-radius: 4px;
-	font-size: 30px;
-	text-align: center;
+    width: 390px;
+    padding: 20px;
+    margin: 20px;
+    border: 1px solid #FF5A5F;
+    border-radius: 4px;
+    text-align: center;
 }
